feat: new heading

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	</header>
 	<main>
 		<header>
-			<h1 class="mainHeader">Jakub Lodoń</h1>
+			<h1 class="mainHeader">Jakub Lodoń-siema github</h1>
 		</header>
 
 		<section>
